--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   },
   "homepage": "https://github.com/madhurima999/Markdown_Blog#readme",
   "dependencies": {
+    "colors": "^1.4.0",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "method-override": "^3.0.0",
     "mongoose": "^7.2.3",
     "nodemon": "^2.0.22"
   }
